# wasm

./: .gitignore  Makefile  package.json  webpack.config.js
.github/actions/build-scripts/: action.yml  entrypoint.sh
.github/actions/version/: index.js
.github/actions/wasm-pack/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: compiler-release.yml  release.yml
loa/: Cargo.toml
loa/src/: lib.d.ts  lib.rs
loa/test/: package.json  webpack.config.js
loa/test/public/: index.html
loa/test/src/: index.js  serverWorker.js  worker.js
loac/: Cargo.toml  package.json
loac/src/: lib.rs  loac.js
loavm/: Cargo.toml
loavm/src/: lib.rs  loavm.js
