[package]
name = "loa"
version = "0.1.12"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
loalang = { path = "../../loalang" }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = "1"
serde_derive = "1"
futures = "0.3"

[dependencies.wasm-bindgen]
version = "0.2"
features = [
  'serde-serialize'
]

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'WorkerGlobalScope',
]

[profile.release]
opt-level = "s"
