[package]
name = "loavm"
version = "0.1.19"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
loalang = "0.1.15"

[profile.release]
opt-level = "s"
